--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/markerclusterer": "^2.0.8",
     "@googlemaps/react-wrapper": "^1.1.34",
     "@googlemaps/typescript-guards": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.4",
