--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@googlemaps/markerclusterer": "^2.0.8",
     "@googlemaps/react-wrapper": "^1.1.34",
     "@googlemaps/typescript-guards": "^2.0.0",
+    "@react-google-maps/api": "^2.12.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,9 +27,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged",
+    "eslint": "node_modules/.bin/eslint src/",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,md,json}' --config ./.prettierrc"
   },
-  "eslintConfig": {
+  "lint-staged": {
+    "*.{js, jsx}": [
+      "node_modules/.bin/eslint --max-warnings=0",
+      "prettier --write"
+    ]
+  },
+    "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
@@ -47,7 +57,15 @@
     ]
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
     "@types/google.maps": "^3.49.2",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "ts-node": "^10.8.1"
   }
 }
