--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
     "@types/react": "^18.0.13",
     "@types/react-dom": "^18.0.5",
     "@types/uuid": "^8.3.4",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "fast-equals": "^3.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -38,7 +42,7 @@
       "prettier --write"
     ]
   },
-    "eslintConfig": {
+  "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
@@ -59,6 +63,7 @@
   "devDependencies": {
     "@types/google-map-react": "^2.1.7",
     "@types/google.maps": "^3.49.2",
+    "@types/node": "^18.0.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
