--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "eject": "react-scripts eject",
     "precommit": "lint-staged",
     "eslint": "node_modules/.bin/eslint src/",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,md,json}' --config ./.prettierrc"
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,md,json}' --config ./.prettierrc",
+    "server": "nodemon server.js"
   },
   "lint-staged": {
     "*.{js, jsx}": [
